[gd_scene load_steps=5 format=3 uid="uid://bexamscreen1"]

[ext_resource type="Script" path="res://scripts/ui/ExaminationScreen.gd" id="1_examination"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_background"]
bg_color = Color(0.227451, 0.145098, 0.0941176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_book"]
bg_color = Color(0.956863, 0.909804, 0.847059, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.545098, 0.266667, 0.137255, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 12
shadow_offset = Vector2(6, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_zoom"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.843137, 0, 1)

[node name="ExaminationScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 690.0
script = ExtResource("1_examination")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_background")

[node name="CustomerHeader" type="Panel" parent="."]
layout_mode = 0
offset_top = 10.0
offset_right = 1080.0
offset_bottom = 70.0

[node name="HeaderLabel" type="Label" parent="CustomerHeader"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.956863, 0.909804, 0.847059, 1)
theme_override_font_sizes/font_size = 24
text = "Examining book for: Mrs. Kowalski"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BookCoverRect" type="Panel" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 95.0
offset_right = 840.0
offset_bottom = 495.0
theme_override_styles/panel = SubResource("StyleBoxFlat_book")
mouse_filter = 0

[node name="BookTitleLabel" type="Label" parent="BookCoverRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -180.0
offset_right = 250.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.4, 0.35, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "Ancient Tome"
horizontal_alignment = 1

[node name="BookPatternLabel" type="Label" parent="BookCoverRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -50.0
offset_right = 280.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.4, 0.35, 0.3)
theme_override_font_sizes/font_size = 80
text = "∆ ◊≈ ⊕⊗◈
⊞⊟≈ ⬡≈≈⊢⬡"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UVOverlayLabel" type="Label" parent="BookCoverRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -180.0
offset_right = 280.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.4, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Previous owner:
Margaret K.
1924"
horizontal_alignment = 1
vertical_alignment = 1
visible = false

[node name="ZoomInsetPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 760.0
offset_top = 180.0
offset_right = 1060.0
offset_bottom = 480.0
theme_override_styles/panel = SubResource("StyleBoxFlat_zoom")

[node name="ZoomLabel" type="Label" parent="ZoomInsetPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "2× ZOOM"

[node name="ZoomViewRect" type="ColorRect" parent="ZoomInsetPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.956863, 0.909804, 0.847059, 1)

[node name="ZoomContentLabel" type="Label" parent="ZoomInsetPanel/ZoomViewRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.4, 0.35, 0.6)
theme_override_font_sizes/font_size = 160
text = "∆"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="CrosshairH" type="ColorRect" parent="BookCoverRect"]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 200.0
offset_right = 600.0
offset_bottom = 202.0
color = Color(1, 0.843137, 0, 0.5)

[node name="CrosshairV" type="ColorRect" parent="BookCoverRect"]
visible = false
layout_mode = 0
offset_left = 300.0
offset_top = 0.0
offset_right = 302.0
offset_bottom = 400.0
color = Color(1, 0.843137, 0, 0.5)

[node name="Toolbar" type="Panel" parent="."]
layout_mode = 0
offset_top = 610.0
offset_right = 1080.0
offset_bottom = 690.0

[node name="SkipButton" type="Button" parent="Toolbar"]
layout_mode = 0
offset_left = 800.0
offset_top = 15.0
offset_right = 1050.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 18
text = "SKIP EXAMINATION"

[node name="UVButton" type="Button" parent="Toolbar"]
layout_mode = 0
offset_left = 580.0
offset_top = 15.0
offset_right = 780.0
offset_bottom = 65.0
theme_override_font_sizes/font_size = 18
text = "UV LIGHT"
visible = false

[connection signal="pressed" from="Toolbar/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="Toolbar/UVButton" to="." method="_on_uv_button_pressed"]
